added javadoc, reviewdog